--- a/src/components/menu/menuItem.module.scss
+++ b/src/components/menu/menuItem.module.scss
@@ -1,6 +1,6 @@
 .container {
     background-color: #ffffff;
-    border-bottom: 4px solid rgba(0, 0, 0, .1);
+    border-bottom: 4px solid rgba(0, 0, 0, 0.1);
     padding: 17px 0;
     margin: 20px 0;
 
@@ -12,9 +12,6 @@
         margin: 10px 0;
     }
 
-    span {
-        margin-top: 20px;
-    }
 }
 
 .max_width {
