--- a/src/components/styles/globalStyle.scss
+++ b/src/components/styles/globalStyle.scss
@@ -60,10 +60,10 @@ img {
 }
 
 .link_modal {
-    color: $green-dark;
+    color: $grey-primary;
     background-color: transparent;
     padding: 10px 0 0 0;
-    font-weight: $font-bold;
+    font-weight: $font-normal;
     border: none;
 }
 
