--- a/src/components/modals/modalLanguage.module.scss
+++ b/src/components/modals/modalLanguage.module.scss
@@ -14,16 +14,14 @@
     }
 }
 
-.spacer {
-    margin: 40px 0;
+.languages {
+    padding: 20px 20px 0 20px;
 }
 
-.grey_bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 90px;
-    width: 100%;
-    background-color: #f4f4f4;
-    z-index: -1;
+.spacer {
+    margin: 30px 0 40px 0;
+
+    button {
+        margin-left: 20px;
+    }
 }
