--- a/src/components/menu/menuList.module.scss
+++ b/src/components/menu/menuList.module.scss
@@ -7,6 +7,7 @@
     position: sticky;
     top: 0;
     border-bottom: 4px solid #B6E79F;
+    z-index: 999;
     
     ul li {
         padding: 20px;
