--- a/src/components/menu/menuItem.module.scss
+++ b/src/components/menu/menuItem.module.scss
@@ -3,6 +3,7 @@
     border-bottom: 4px solid rgba(0, 0, 0, 0.1);
     padding: 17px 0;
     margin: 20px 0;
+    z-index: -10;
 
     h3 {
         margin: 0 0 10px 0;
