--- a/src/components/styles/globalStyle.scss
+++ b/src/components/styles/globalStyle.scss
@@ -85,6 +85,8 @@ img {
 .margin_section {
     margin: 30px 20px 0 20px;
     position: relative;
+    z-index: -1;
+    
     &::before {
         content: '';
         position: absolute;
