--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -32,15 +32,15 @@
         right: 0;
         top: 2px;
     }
-    
+
     .link {
-        
         display: inline-block;
         margin-left: 10px;
         padding: 8px;
         background-color: #fff;
         border-radius: 7px;
-        
+        height: 37px;
+        width: 37px;
 
         svg {
             display: flex;
